; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_gdashboard.c_render_data_hosts.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_gdashboard.c_render_data_hosts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@color_selected = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i8*, i32)* @render_data_hosts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @render_data_hosts(i32* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = bitcast %struct.TYPE_3__* %5 to i64*
  store i64 %1, i64* %10, align 4
  store i32* %0, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i8*, i8** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i8* @left_pad_str(i8* %11, i32 %12)
  store i8* %13, i8** %9, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @color_selected, align 4
  %21 = call i32 @draw_header(i32* %14, i8* %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %17, i32 0, i32 %19, i32 %20)
  %22 = load i8*, i8** %9, align 8
  %23 = call i32 @free(i8* %22)
  ret void
}

declare dso_local i8* @left_pad_str(i8*, i32) #1

declare dso_local i32 @draw_header(i32*, i8*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
